--- a/wp-content/themes/mitm/assets/sass/global/_typography.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_typography.scss
@@ -10,22 +10,44 @@
     @include font-shorthand(34px, normal, 40px);
      @extend %Lobstertwo;
     font-style: italic;
+    @media (max-width: $screen-xs-max) {
+        @include font-shorthand(29px, normal, 35px);
+    }
 
 }
 
 %heading-level-3 {
-    @include font-shorthand(28px, normal, 28px);
+    @include font-shorthand(29px, normal, 40px);
     @extend %Lobstertwo;
     font-style: italic;
+    @media (max-width: $screen-xs-max) {
+        @include font-shorthand(23px, normal, 36px);
+    }
 }
 %heading-level-5 {
     @include font-shorthand(25px, 500, 34px);
     @extend %Raleway;
+    @media (max-width: $screen-xs-max) {
+        @include font-shorthand(22px, normal, 33px);
+    }
+}
+
+%heading-level-6 {
+    @include font-shorthand(23px, 500, 30px);
+    @extend %Raleway;
+    @media (max-width: $screen-xs-max) {
+        @include font-shorthand(20px, normal, 28px);
+    }
     
 }
-%heading-level-3 {
-     
-}
+%heading-level-7 {
+    @include font-shorthand(20px, 500, 28px);
+    @extend %Raleway;
+    @media (max-width: $screen-xs-max) {
+        @include font-shorthand(17px, normal, 28px);
+    }
+    
+} 
  
 // Pharagraph
 //------------------------------
