change home slider title color

--- a/wp-content/themes/mitm/assets/sass/pages/_home.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_home.scss
@@ -30,6 +30,10 @@
                 min-height: 114px;
                 @include font-shorthand(20px, 700, 24px);
             }
+            a {
+                color: $White;
+                text-decoration: none;
+            }
         }
         figure {
             background: url(../images/net_img.png) repeat-x left top;
