--- a/wp-content/themes/mitm/assets/sass/pages/_home.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_home.scss
@@ -32,7 +32,7 @@
             }
         }
         figure {
-            background: url(../images/net_img.png) repeat-x left top;
+            background: url(../images/net_img.png) repeat-x left -30px;
             text-align: center;
             img {
                 position: relative;
@@ -73,9 +73,9 @@
             }
         }
         .owl-pagination {
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.8);
             position: absolute;
-            bottom: 0;
+            bottom: -47px;
             width: 100%;
             text-align: center;
             padding: 0px 0;
@@ -105,6 +105,11 @@
         /* DIRECTION CONTROLS (NEXT / PREV) */
     }
     .hero-caption {
+        margin-top: 40px;
+        @media (min-width: $screen-sm-min) {
+            margin-top: 85px;
+        }
+
         p {
             margin: 14px 30px 0;
             @extend %text-center;
@@ -343,3 +348,5 @@
         text-indent: -99999px;
     }
 }
+
+
