--- a/wp-content/themes/mitm/assets/sass/global/_components.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_components.scss
@@ -186,6 +186,16 @@ td {
             background-color: rgba($Orange, 0.7);
         }
     }
+    &.gaq{
+    width: 170px;
+    margin: 0px auto;
+    float: none;
+    display: block;
+    padding: 12px 0;
+        &:hover{
+            text-decoration: none;
+        }
+    }
 }
 
 .social-links {
