--- a/wp-content/themes/mitm/assets/sass/pages/_studio.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_studio.scss
@@ -1,5 +1,5 @@
 //
-// about page 
+// studio page 
 // --------------------------------------------------
 .studio-page {
     margin-bottom: 65px;
@@ -14,20 +14,32 @@
             @include font-shorthand(29px, 700, 35px);
         }
     }
+    .wp-content-section {
+        h2 {
+            @extend %text-center;
+            @extend %heading-level-2;
+            font-style: italic;
+            margin: 35px 0 30px;
+            font-weight: 700;
+            padding: 0;
+            @media (max-width: $screen-xs-max) {
+                margin: 24px 0 -10px;
+                @include font-shorthand(29px, 700, 35px);
+            }
+        }
+    }
     h4 {
         @extend %text-center;
         @extend %heading-level-5;
         margin-top: 35px;
+        &.toolheading {
+            margin: 64px 0 27px 0;
+        }
     }
-
-    .roman-no, .roman-no2 {
+    .roman-no {
         @extend %text-center;
         @extend %roman-no-1;
         margin: 35px 0 12px 0;
-    }
-    .roman-no-2 {
-        @extend %text-center;
-        @extend %roman-no-2;
     }
     .banner-img {
         margin: auto;
@@ -43,12 +55,13 @@
         }
         @media (max-width: $screen-xs-max) {
             figure {
-               background-position: 90% top;
+                background-position: 90% top;
                 img {
                     display: none;
                 }
                 &.studio-page-banner {
                     //@include bg-img-center(mob-studio-banner, jpg);
+               
                 }
             }
         }
@@ -60,54 +73,78 @@
             @include font-shorthand(17px, normal, 31px);
         }
     }
-    .orange-patterns {
-        color: $White;
-        padding-top: 30px;
-        margin: 38px auto 38px;
-        height: 100px;
-        @extend %width-960;
-        @include bg-img-center(orange-patterns, png);
-        h2 {
-            margin: 0;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        @media (max-width: $screen-xs-max) {
-            padding-top: 20px;
-              margin: 25px auto;
-            h2 {
-                margin: 0 83px;
-                @include font-shorthand(23px, normal, 31px);
-            }
-        }
-    }
-    .gray-patterns {
-        color: $White;
-        padding-top: 30px;
-        margin: auto;
-        height: 100px;
-        @extend %width-960;
-        @include bg-img-center(gray-patterns, png);
-        h2 {
-            margin: 0;
-        }
-        @media (max-width: $screen-xs-max) {
-            padding-top: 20px;
-            margin-top: 20px;
-            h2 {
-                margin: 0 40px;
-                @include font-shorthand(23px, normal, 31px);
-            }
-        }
-    }
-    .writer-section {
-        figure {
-            margin: 41px 0 65px;
-        }
+    .bottom-content {
         h4 {
-            margin-top: 40px;
-            &.toolheading {
-                margin: 20px 0 26px;
+            margin: -19px 0 -9px;
+        }
+        @media (max-width: $screen-xs-max) {
+            h4 {
+                margin: 25px 0 10px;
+            }
+            p {
+                margin: 0 15px;
+            }
+            figure {
+                img {
+                    max-width: 100%;
+                    height: auto;
+                }
+            }
+        }
+    }
+    @media (max-width: $screen-xs-max) {
+        margin-bottom: 0;
+        .row {
+            margin-left: 0;
+            margin-right: 0;
+        }
+    }
+    .tool-mantra {
+        margin-top: 78px;
+        p {
+            margin: 28px 10px 30px;
+        }
+    }
+    //--------tool box---------//
+    .tool-index {
+        margin-bottom: 72px;
+        figure {
+            margin: 0;
+            img {
+                width: 100%;
+            }
+        }
+        .article {
+            //display: none;
+            border-bottom: 1px solid $BdColor;
+            padding: 32px 37px;
+            line-height: 34px;
+            @extend %article;
+        }
+    }
+    .desktop-tools {
+        .tool-index {
+            h4 {
+                cursor: pointer;
+                margin: 0;
+                padding: 7px 34px 15px 40px;
+                font-style: italic;
+                background-color: $BgColor;
+                background-repeat: no-repeat;
+                color: $White;
+                font-weight: bold;
+                @include bg-img-only(sprite / arrow_dwn_white, png);
+                background-position: 95.1% center;
+                @extend %text-left;
+                @extend %Lobstertwo;
+                &.active {
+                    background-color: $Orange;
+                    @include bg-img-only(sprite / arrow_up_white, png);
+                    background-position: 95.1% center;
+                }
+                &.toolheading {
+                    margin: 20px 0 26px;
+                }
             }
         }
         p {
@@ -140,6 +177,13 @@
                         }
                     }
                 }
+                &:nth-last-of-type(1) {
+                    margin: 0 53px 0 0;
+                    float: right;
+                    li {
+                        width: 108px;
+                    }
+                }
             }
             ul.block-two {
                 margin: 0 10px 0 59px;
@@ -147,170 +191,106 @@
                     padding: 5px 5px 5px 12px;
                 }
             }
-            ul.block-three {
-                margin: 0 10px 0 53px;
-                li {
-                    width: 108px;
-                }
-            }
-        }
-    }
-    @media (max-width: $screen-xs-max) {
-        .writer-section {
-            figure {
-             margin: 30px 0 0;
-            img {
-                max-width: 100%;
-                height: auto;
-            }
-        }
-            p {
-                margin:15px;
-            }
-            h4 {margin-top: 25px;
-                
-                &.toolheading {
-                margin: 40px 0 15px;
-            }
-            }
-        }
-        .desktop-tools {
-            display: none;
         }
     }
     .mobile-tools {
-        display: none;
-        border-top: 1px solid $BdColor5;
-        border-bottom: 1px solid $BdColor5;
         .toolboox-title {
-            background-color: $BgColor3;
-            border-bottom: 1px solid $BdColor5;
-            color: $text-color3;
-            text-decoration: none;
-            padding: 15px;
-            cursor: pointer;
             @extend %list-level-1;
             @extend %text-center;
-        }
-        .woodworking-tools {
-            .toolboox-title {
-                border-top: 1px solid $BdColor5;
-                border-bottom: 0 none;
-            }
+            display: none;
         }
         .toolboox-content {
-            display: none;
             figure {
-                margin: 0;
                 .toolboox-caption {
-                    background-color: $BgColor;
-                    color: $White;
-                    cursor: pointer;
-                    text-align: center;
-                    padding: 18px 0;
+                    display: none;
                     @extend %list-level-1;
                     @include bg-img-only(close_s, png, no-repeat, 97%, center);
                 }
             }
             p {
                 @extend %text-left;
-                padding-left: 15px;
-                padding-right: 15px;
-            }
-        }
-        @media (max-width: $screen-xs-max) {
-            display: block;
-            h4 {
-                margin: 20px 20px 18px;
-            }
-            figure {
-                 
-                img {
-                    max-width: 100%;
-                    height: auto;
-                }
-                 
-            }
-        }
-    }
-    .tool-index {
-        margin-bottom: 72px;
-        figure {
-            margin: 0;
-            img {
-                width: 100%;
-            }
-        }
-        h4 {
-            cursor: pointer;
-            margin: 0;
-            padding: 12px 34px 15px 40px;
-            font-style: italic;
-            @extend %text-left;
-            @extend %Lobstertwo;
-            background-color: $BgColor;
-            color: $White;
-            span {
-                margin-top: 10px;
-                @extend %pull-right;
-                @include size(33px, 18px);
-                @include bg-img-center(sprite / arrow_dwn_white, png);
-            }
-            &.active {
-                background-color: $Orange;
-                span {
-                    @include bg-img-center(sprite / arrow_up_white, png);
-                }
-            }
-        }
-        .article {
-            //display: none;
-            border-bottom: 1px solid $BdColor;
-            padding: 32px 40px;
-            line-height: 34px;
-            @extend %article;
-        }
-        &::nth-child(4) {
-            border: 1px solid blue;
-        }
-        &::nth-child(5) {
-            border: 1px solid red;
-        }
-    }
-    .bottom-content {
-        h4 {
-            margin: -19px 0 -9px;
-        }
-        @media (max-width: $screen-xs-max) {
-            h4 {
-                margin: 25px 0 10px;
-            }
-            p {
-                margin: 0 15px;
-            }
-            figure {
-                img {
-                    max-width: 100%;
-                    height: auto;
-                }
             }
         }
     }
     @media (max-width: $screen-xs-max) {
-        margin-bottom: 0;
-        .row { margin-left:0; margin-right:0; }
+        .tool-index {
+            margin-bottom: 0;
+            .article {
+                display: block !important;
+                padding: 20px 30px 20px 40px;
+                text-align: left;
+                line-height: 31px;
+            }
+        }
+        .desktop-tools {
+            .tools-list {
+                display: none;
+            }
+            .tool-index {
+                h4, .roman-no {
+                    display: none;
+                }
+            }
+        }
+        .mobile-tools {
+            // display: none;
+            border-top: 1px solid $BdColor5;
+            border-bottom: 1px solid $BdColor5;
+            h4 {
+                font-size: 25px;
+                line-height: 33px;
+                margin: 30px;
+            }
+            .toolboox-title {
+                display: block;
+                background-color: $BgColor3;
+                border-bottom: 1px solid $BdColor5;
+                color: $text-color3;
+                text-decoration: none;
+                padding: 15px;
+                cursor: pointer;
+            }
+            figure {
+                img {
+                    max-width: 100%;
+                    height: auto;
+                }
+            }
+            .woodworking-tools {
+                .toolboox-title {
+                    border-top: 1px solid $BdColor5;
+                    border-bottom: 0 none;
+                }
+            }
+            .toolboox-content {
+                display: none;
+                figure {
+                    margin: 0;
+                    .toolboox-caption {
+                        display: block;
+                        background-color: $BgColor;
+                        color: $White;
+                        cursor: pointer;
+                        text-align: center;
+                        padding: 18px 0;
+                    }
+                }
+                p {
+                    padding-left: 15px;
+                    padding-right: 15px;
+                }
+            }
+            .article {}
+        }
     }
+    //------end tool box-------//
 }
 
 .page-template-page-studio-php {
     .subscribe-form-wrapper {
-        
         @include bg-img(about-footer-bg, jpg, repeat);
         @media (max-width: $screen-xs-max) {
-
-        margin: 25px auto 0;
-        //@include size(320px, 165px);
-            //@include bg-img-center(mob-studio-footer, jpg);
-    }
+            margin: 25px auto 0;
+        }
     }
 }
