--- a/wp-content/themes/mitm/assets/sass/global/_components.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_components.scss
@@ -244,3 +244,56 @@ p {
         width: 100%;
     }
 }
+
+
+
+.form-row{
+    overflow:hidden;
+    margin: 0px auto;
+
+}
+
+.form-row .multi{
+    width: 50%;
+    float: left;
+    padding-right: 20px;
+
+    @media (max-width: $screen-sm-min) {
+        width: 100%;
+        float: none;
+    }
+}
+
+.form-row .multi:last-child{
+   padding-right: 0px;
+}
+
+.form-row label{
+    display: block;
+    font-size: 14px;
+    font-family: arial;
+    margin-bottom: 10px;
+}
+
+.form-row input, .form-row textarea{
+    display: block;
+    font-size: 14px;
+    font-family: arial;
+    width: 100%;
+    border: 1px solid lightgray;
+    padding:10px;
+    margin-bottom: 30px;
+
+      @media (max-width: $screen-sm-min) {
+        width: 100%;
+    }
+}
+
+.form-row input.wpcf7-submit{
+    background-color: #f4783e;
+    border-color: #f4783e;
+    color: #fff;
+}
+
+
+
