--- a/wp-content/themes/mitm/assets/sass/global/_components.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_components.scss
@@ -250,6 +250,9 @@ p {
 .form-row{
     overflow:hidden;
     margin: 0px auto;
+    @media (max-width: $screen-sm-min) {
+        padding: 0 20px;
+    }
 
 }
 
@@ -261,6 +264,7 @@ p {
     @media (max-width: $screen-sm-min) {
         width: 100%;
         float: none;
+        padding-right: 0px
     }
 }
 
