make asterisk red

--- a/wp-content/themes/mitm/assets/sass/global/_components.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_components.scss
@@ -279,6 +279,10 @@ p {
     margin-bottom: 10px;
 }
 
+.form-row label span{
+    color: red;
+}
+
 .form-row input, .form-row textarea{
     display: block;
     font-size: 14px;
