styling of success message for blog page

--- a/wp-content/themes/mitm/assets/sass/pages/_blog.scss
+++ b/wp-content/themes/mitm/assets/sass/pages/_blog.scss
@@ -308,3 +308,16 @@
         @include bg-img(subscribe-orange-bg, jpg, repeat, left, top);
     }
 }
+
+.page-section {
+    .success {
+        @include size(310px, auto);
+        @include font-shorthand(21px, normal, normal);
+        padding: 8px 0 8px 0;
+        text-align: center;
+        border: 1px solid;
+        position: relative;
+        top: 65px;
+        margin: auto;
+    }
+}
