wp paginate updated to 1.3.1

--- a/wp-content/plugins/wp-paginate/wp-paginate.css
+++ b/wp-content/plugins/wp-paginate/wp-paginate.css
@@ -1,7 +1,7 @@
 /*
  * WP-Paginate - WordPress Pagination Function
- * Revision: $Id: wp-paginate.css 943040 2014-07-03 18:30:39Z emartin24 $
- * Copyright (c) 2014 Eric Martin http://www.ericmmartin.com/projects/wp-paginate/
+ * Revision: $Id: wp-paginate.css 1044618 2014-12-14 23:43:29Z emartin24 $
+ * Copyright 2014 Studio Fuel (http://www.studiofuel.com)
  */
 .wp-paginate {padding:0; margin:0;}
 .wp-paginate li {display:inline; list-style:none;}
